fix z-index menu

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -332,7 +332,7 @@ nav ul ul,
 	-ms-box-shadow: 0 0 10px rgba(0,0,0,0.11);
 	-o-box-shadow: 0 0 10px rgba(0,0,0,0.11);
 	box-shadow: 0 0 10px rgba(0,0,0,0.11);
-	z-index: 999999999;
+	z-index: 10;
 }
 header .bottom-header.sticky nav > ul > li {
 	padding: 25px 16px 28px;
